--- a/scss/app.scss
+++ b/scss/app.scss
@@ -2,6 +2,7 @@
 
 @import 'settings';
 @import 'foundation';
+@import 'vendor/font-awesome/scss/font-awesome';
 @import 'motion-ui';
 
 @include foundation-global-styles;
